--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://amdgigabyte.github.com/blog
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: new Code();
+subtitle: '["html","javascript","css","nodejs","shell","linux","coffeescript"]'
+author: Qiaofu 
 simple_search: http://google.com/search
 description:
 
