--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: http://amdgigabyte.github.com/blog
-title: new Code();
+title: kun的记事本
 subtitle: '["html","javascript","css","nodejs","shell","linux","coffeescript"]'
 author: Qiaofu 
 simple_search: http://google.com/search
