--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://amdgigabyte.github.com/blog
 title: kun的记事本
-subtitle: '["html","javascript","css","nodejs","shell","linux","coffeescript"]'
+subtitle: '发现精彩，体会精彩，分享精彩'
 author: Qiaofu 
 simple_search: http://google.com/search
 description:
